app/assets/stylesheets/custom.scss
// GENERAL //

body {
	font-size: 1.7rem;
	background-color: #f1f1f1;
	font-family: 'Source Sans Pro', sans-serif;
}

// HELPERS //

.padded {
	padding: 20px;
}

.half-padded {
	padding: 10px;
}

// NAV //

.navbar {
	border-radius: 0px;
}

.navbar-inverse {
	background-color: #112E51;

	.navbar-brand {
		color: #fff;
		font-family: 'Yellowtail', cursive;
		margin: 0;
		padding: 2.1rem 0px 0px 0px;
		float: left;
		font-size: 4.6rem;
	}
}

.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
	margin:0;
}

@media (min-width: 768px) {
.container > .navbar-header {
	float: none;
	margin-left: 0px;
	margin-right: 0px;
}
}

.menu-icon {
	float: right;
	display: block;
	font-size: 40px;
	margin-top: 3px;

	a {
		color: #fff;
	}

	a:hover {
		color: #d6d7d9;
	}
}

// FORM //

.form-control {
	border-radius: 0px;
	box-shadow: none;
	border: 1px solid #5b616b;
    box-sizing: border-box;
    color: #212121;
}

.form-group em {
	float: right;
}

.form-group {
	margin-bottom: 20px;
}

select {
background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%20fill%3D%22%23555555%22%20%0A%09%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%22-261%20145.2%2024%2024%22%20style%3D%22enable-background%3Anew%20-261%20145.2%2024%2024%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cpath%20d%3D%22M-245.3%2C156.1l-3.6-6.5l-3.7%2C6.5%20M-252.7%2C159l3.7%2C6.5l3.6-6.5%22%2F%3E%0A%3C%2Fsvg%3E") !important;
  padding-right: 25px;
  background-repeat: no-repeat;
  background-position: right center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.btn {
	font-size: 19px;
	padding: 15px 30px 15px 30px;
	border: none;
	border-radius: 0.3rem;
}

.btn-primary {
	background-color: #8ba6ca;
}

.btn-primary:hover {
	background-color: #4773aa;
}

.btn-success {
	background-color: #94bfa2;
	border: none;
}

.btn-success:hover {
	background-color: #4aa564;
}

// TRANSITIONS //

a, .btn, .drawer, .drawer-right {
  -o-transition:.3s;
  -ms-transition:.3s;
  -moz-transition:.3s;
  -webkit-transition:.3s;
  transition:.3s;
}

// MOBILE //

